<resources>
    <string name="app_name">IDE</string>
    <string name="options">Options</string>
    <string name="execute">Ejecutar</string>
    <string name="codeHint">Escribe el codigo aqui</string>
    <string name="openFileDisp">Abrir proyecto</string>
    <string name="close">Close</string>
    <string name="output_button">output button</string>
    <string name="lineAndCol">C0:L0</string>
    <string name="outputTitle">OUTPUT</string>
    <string name="clearConsolee">Limpiar</string>
    <string name="clearBtnDescription">Clear content button</string>
    <string name="exportBtnTxt">Exportar pfd</string>
    <string name="identationBtnTxt">IdentarCodigo</string>
    <string name="colorIdeBtnTxt">Colorear ide</string>
    <string name="saveProject">Guardar Proyecto</string>
</resources>