<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <Button
        android:id="@+id/openFileBtn"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/openFileDisp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeOpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/exportPdfBtn"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/exportBtnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openFileBtn" />

    <Button
        android:id="@+id/identationBtn"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/identationBtnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportPdfBtn" />

    <Button
        android:id="@+id/colorsBtn"
        android:layout_width="153dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/colorIdeBtnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identationBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>