<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutputActivity">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />

    <TextView
        android:id="@+id/outputDisplay"
        android:layout_width="367dp"
        android:layout_height="526dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="167dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:text="@string/outputTitle"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toEndOf="@+id/closeBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearConsoleBtn"
        android:layout_width="110dp"
        android:layout_height="57dp"
        android:layout_marginBottom="24dp"
        android:text="@string/clearConsolee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>